--- a/php-runtime/Dockerfile
+++ b/php-runtime/Dockerfile
@@ -4,10 +4,11 @@ RUN curl -sL https://deb.nodesource.com/setup_18.x -o nodesource_setup.sh; \
     bash nodesource_setup.sh; \
     apt-get update; \
     apt-get install -y --no-install-recommends \
+    libmaxminddb0 \
     nodejs \
     nginx; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
-    rm -rf /var/lib/apt/lists/*; \
+    rm -rf nodesource_setup.sh nginx-* /var/lib/apt/lists/*; \
     npm i -g npm yarn; \
     php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"; \
     php -r "if (hash_file('sha384', 'composer-setup.php') === '55ce33d7678c5a611085589f1f3ddf8b3c52d662cd01d4ba75c0ee0459970c2200a51f492d557530c71c15d8dba01eae') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"; \
